--- a/views/profile.template.html
+++ b/views/profile.template.html
@@ -26,8 +26,25 @@
             </span>
             
         </div>
-    </div>
-
+  </div>
+  <div class="row">   
+    <div class="col-12" style="text-align: center"><br><br>
+            <img src="./lib/img/ico_rank.png">Ranking(momento)  
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-success">1º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">2º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">3º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">4º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">5º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">6º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">7º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">8º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">9º Lucas Pts 100</li>
+        <li class="list-group-item list-group-item-success">10º Lucas Pts 100</li>
+  
+   </ul>
+  </div>
+</div>
 
 
     
