--- a/views/rooms/easy/create.template.html
+++ b/views/rooms/easy/create.template.html
@@ -75,6 +75,13 @@
                             placeholder=""></textarea>
                         <small id="InputDescriptionRoom" class="form-text text-muted">Tip</small>
                     </div>
+
+                    <div class="form-group">
+                        <label for="InputDescriptionRoom">Tip 3:</label>
+                        <textarea ng-model="question.tip3" type="text" class="form-control" id="InputDescriptionTIP"
+                            placeholder=""></textarea>
+                        <small id="InputDescriptionRoom" class="form-text text-muted">Tip</small>
+                    </div>
                  
 
                     <div class="form-group">
