--- a/views/rooms/medium/room.template.html
+++ b/views/rooms/medium/room.template.html
@@ -142,17 +142,27 @@
                             </div>
                             <div class="card-body">
                                 <div class="row" style="text-align: center">
-                                    <div class="col-4">
-                                        <a href="#" ng-click="getTip()">
-                                            <img src="./lib/img/ico_dica.png" style="height: 50px; "> Get Tip
+                                    <div class="col-3">
+                                        <a href="#" ng-click="getTip1()">
+                                            <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
                                         </a>
                                     </div>
-                                    <div class="col-4" ng-click="skip()">
+                                    <div class="col-3">
+                                        <a href="#" ng-click="getTip2()">
+                                            <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
+                                        </a>
+                                    </div>
+                                    <div class="col-3">
+                                        <a href="#" ng-click="getTip3()">
+                                            <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
+                                        </a>
+                                    </div>
+                                    <div class="col-3" ng-click="skip()">
                                         <a href="#">
                                             <img src="./lib/img/ico_skip.png" style="height: 50px; "> Skip
                                         </a>
                                     </div>
-                                    <div class="col-4"></div>
+                                   
                                 </div>
         
         
