--- a/views/rooms/easy/congratulations.template.html
+++ b/views/rooms/easy/congratulations.template.html
@@ -7,7 +7,7 @@
        
             <div class="col-12" style="text-align: center">
                 <img src="./lib/img/trofeu.png">
-                <h1>Congratulations!</h1>
+                <h1>Parabéns!</h1>
                 <img src="./lib/img/ico_hit.png">{{resume.hits}}
                 <img src="./lib/img/ico_err.png">{{resume.errors}}
                 <img src="./lib/img/ico_mini_skip.png">{{resume.skips}}
@@ -15,7 +15,7 @@
                 
                 <span ng-click="restart()" class="btn btn-success" style="cursor: pointer">
                   Restart
-                </span>
+                </span> 
             </div>
 
     </div>
