--- a/views/rooms/easy/room.template.html
+++ b/views/rooms/easy/room.template.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="card text-white bg-info mb-3" style="width: 100%">
-                    <div class="card-header">Question:</div>
+                    <div class="card-header">Questão:</div>
                     <div class="card-body">
                         <p class="card-text">{{ question.ask }}</p>
                     </div>
@@ -90,13 +90,13 @@
     <div class="col-3" style="border:1px solid #cccccc;">
         
         <div class="row" style="padding: 10px 10px 10px 10px">
-            <div ng-click="sharedLink()" class="col-12" style="cursor: pointer">
+            <!--<div ng-click="sharedLink()" class="col-12" style="cursor: pointer">
                     <div class="card">
                             <div class="card-body" style="text-align: center; font-weight: bold; font-size: 16pt">
                              <img  src="./lib/img/mini_icone_compartilhar.png"> Shared
                        </div>
                     </div>
-            </div>
+            </div>-->
         </div>
 
 
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <!--Barra de dificuldade //-->
+        <!--Barra de dificuldade 
         <div class="row">
             <div class="col-12">
                 Difficulty of question:
@@ -132,13 +132,13 @@
             <div class="col-4" style="text-align: center"><i ng-if="question.level == 3" class="material-icons">change_history
                 </i></div>
 
-        </div>
+        </div>//-->
 
         <div class="row" style="padding-top: 10px">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        Time
+                        Tempo
                     </div>
                     <div class="card-body">
                         <div style="background-image: url('./lib/img/6.gif'); height: 100px; background-repeat: no-repeat; background-position: center; text-align: center; font-size:40px; padding-top: 15px">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="card-header">
-                        Score:{{resume.score}}
+                        Pontuação:{{resume.score}}
                     </div>
                 </div>
             </div>
@@ -158,28 +158,22 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        Tools
+                        Ação
                     </div>
                     <div class="card-body">
                         <div class="row" style="text-align: center">
                             <div class="col-3">
-                                <a href="#" ng-click="getTip1()">
-                                    <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
-                                </a>
+                               
                             </div>
                             <div class="col-3">
-                                <a href="#" ng-click="getTip2()">
-                                    <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
-                                </a>
+                                
                             </div>
                             <div class="col-3">
-                                <a href="#" ng-click="getTip3()">
-                                    <img src="./lib/img/ico_dica.png" style="height: 50px; "> <br>Get Tip
-                                </a>
+                               
                             </div>
                             <div class="col-3" ng-click="skip()">
                                 <a href="#">
-                                    <img src="./lib/img/ico_skip.png" style="height: 50px; "> Skip
+                                    <img src="./lib/img/ico_skip.png" style="height: 50px; "> Pular
                                 </a>
                             </div>
                            
