--- a/views/rooms.template.html
+++ b/views/rooms.template.html
@@ -25,13 +25,14 @@
                         <div class="row" style="text-align: left">
                             <div class="col-8">Você é um administrador das salas:</div>
                             <div class="col-4" style="text-align: right;">
-                                <!--botão para criar nova sala//-->
+                                <!--botão para criar nova sala
                                 <span class="btn btn-success" ng-click="openViewNewRoom()">
                                     Nova sala
                                     <i class="material-icons">
                                         videogame_asset
                                     </i>
                                 </span>
+                                //-->
 
                             </div>
                         </div>
