--- a/views/rooms.template.html
+++ b/views/rooms.template.html
@@ -55,7 +55,7 @@
                                     <td ng-if="!room.open" style="color: firebrick">Fechada</td>
                                     <td>{{ room.description}}</td>
                                     <td>
-                                        0
+                                        {{ room.totalParticipantes }}
                                     </td>
                                     <td>
                                         <!--
@@ -205,7 +205,7 @@
                                             <td ng-if="room.type != 'EASY'">Identificação</td>
                                             <td>{{ room.description}}</td>
                                             <td>
-                                                0
+                                                {{ room.totalParticipantes }}
                                             </td>
                                             <td>
                                                     <span ng-if="room.open" ng-click="accessRoom(room)" style="color: green; cursor: pointer">
