--- a/views/skeleton.template.html
+++ b/views/skeleton.template.html
@@ -45,13 +45,22 @@
   </div>
 </div>
 
+<!--
 <div class="row defaultFooter">
   <div class="col-6"></div>
   <div class="col-6">
   </div>
 </div>
 
+-->
 
+<spam id="maisPontos" style="position: absolute;z-index: 10000;left: 30%; top:10%; display: none;font-size: 150pt; color:green">
+   + 5 pts
+</spam>
+
+<spam id="menosPontos" style="position: absolute;z-index: 10000;left: 30%; top:10%; display: none; font-size: 150pt; color:red">
+    - 5 pts
+</spam>
 
 <!--Modais uso diversos //-->
 <div id="modalNewUser" ng-controller="UserCtrl" class="modal" tabindex="-1" role="dialog">
