--- a/views/skeleton.template.html
+++ b/views/skeleton.template.html
@@ -1,6 +1,6 @@
 <div class="row defaultHead">
   <div class="col-6">
-    <img src="./lib/img/mini_logo_transparent_bord.png">
+     <img ng-click="loadMainContent('rooms')" style="cursor: pointer;" src="./lib/img/mini_logo_transparent_bord.png">
   </div>
   <div class="col-6" style="text-align: right">
     <div ng-if="user.isLoged">
