--- a/views/rooms/easy/congratulations.template.html
+++ b/views/rooms/easy/congratulations.template.html
@@ -3,107 +3,54 @@
         <div data-ng-include="'./views/profile.template.html'"></div>
     </div>
 
-    <div class="col-7">
-       
+    <div class="col-10">
+          <div class="row">
             <div class="col-12" style="text-align: center">
                 <img src="./lib/img/trofeu.png">
                 <h1>Parabéns!</h1>
-                <img src="./lib/img/ico_hit.png">{{resume.hits}}
-                <img src="./lib/img/ico_err.png">{{resume.errors}}
-                <img src="./lib/img/ico_mini_skip.png">{{resume.skips}}
+               
                 <br><br><br>
-                
+                <!--
                 <span ng-click="restart()" class="btn btn-success" style="cursor: pointer">
                   Restart
                 </span> 
+                -->
+            </div>
+          </div>
+
+        <div class="row" style="padding-top: 10px">
+            <div class="col-3"> <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.score.totalHits}} pts</div>
+            <div class="col-3"><img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: - {{resume.score.totalErrors}} pts</div>
+            <div class="col-3"><img src="./lib/img/clock.png" style="height: 25px;padding-top: 4px">Bônus tempo: {{resume.score.bonus}}</div>
+            <div class="col-3"><img src="./lib/img/ico_mini_skip.png" style="height: 25px;padding-top: 4px">Questões Puladas: {{resume.skips}}</div>       
+        </div>
+         <div class="row" style="padding-top: 10px">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                                <img src="./lib/img/ico_rank.png">Ranking(momento) 
+                        </div>
+                        <div class="card-body">
+                            <div class="row" style="text-align: center">
+                                   <div class="col-12" style="text-align: center">
+                                                     
+                                            <ul class="list-group" ng-repeat="r in ranking track by $index" style="text-align: left" >
+                                                <li ng-if="user.mail != r.email"class="list-group-item list-group-item" style=""><span style="font-size: 12pt"  class="badge badge-primary badge-pill">{{r.position}}º</span>  {{r.name}} <span style="float: right">Pontos: {{r.score}}</span></li>
+                                                <li ng-if="user.mail == r.email" class="list-group-item list-group-item-success active" style="font-weight: bold"><span style="font-size: 12pt" class="badge badge-warning badge-pill">{{r.position}}º</span> {{r.name}} <span style="float: right">Pontos: {{r.score}}</li>
+                                               
+                                                
+                                            </ul>
+                                          </div>
+                                       
+                            </div>
+    
+    
+                        </div>
+                    </div>
+    
+                </div>
             </div>
 
     </div>
-    <!-- COLUNA DIREITA //-->
-    <div class="col-3" style="border:1px solid #cccccc;">
 
-
-
-        <div class="row" style="padding: 10px 10px 10px 10px">
-            <div class="col-12">
-                <img src="./lib/img/ico_hit.png">{{resume.hits}}
-                <img src="./lib/img/ico_err.png">{{resume.errors}}
-                <img src="./lib/img/ico_mini_skip.png">{{resume.skips}}
-                <img src="./lib/img/ico_rank.png">#10
-            </div>
-        </div>
-
-        <!--Barra de dificuldade //-->
-        <div class="row">
-            <div class="col-12">
-                Difficulty of question:
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-
-            </div>
-        </div>
-        <div class="row">
-             <div class="col-4" style="text-align: center"><i ng-if="question.level == 1"class="material-icons">change_history </i></div>
-             <div class="col-4" style="text-align: center"><i ng-if="question.level == 2" class="material-icons">change_history </i></div>
-             <div class="col-4" style="text-align: center"><i ng-if="question.level == 3"class="material-icons">change_history </i></div>
-                
-        </div>
-
-        <div class="row" style="padding-top: 10px">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Time
-                    </div>
-                    <div class="card-body">
-                        <div style="background-image: url('./lib/img/6.gif'); height: 100px; background-repeat: no-repeat; background-position: center; text-align: center; font-size:40px; padding-top: 15px">
-                            {{ panel.time }}
-                        </div>
-                    </div>
-                    <div class="card-header">
-                        Score:{{resume.score}}
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-        <div class="row" style="padding-top: 10px">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Tools
-                    </div>
-                    <div class="card-body">
-                        <div class="row" style="text-align: center">
-                            <div class="col-4">
-                                <a href="#" ng-click="getTip()">
-                                    <img src="./lib/img/ico_dica.png" style="height: 50px; "> Get Tip
-                                </a>
-                            </div>
-                            <div class="col-4" ng-click="skip()">
-                                <a href="#">
-                                    <img src="./lib/img/ico_skip.png" style="height: 50px; "> Skip
-                                </a>
-                            </div>
-                            <div class="col-4"></div>
-                        </div>
-
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-
-
-
-
-
-    </div>
+</div>
