--- a/views/rooms/easy/room.template.html
+++ b/views/rooms/easy/room.template.html
@@ -138,45 +138,62 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        Tempo
+                        Pontuação Atual
                     </div>
                     <div class="card-body">
-                        <div style="background-image: url('./lib/img/6.gif'); height: 100px; background-repeat: no-repeat; background-position: center; text-align: center; font-size:40px; padding-top: 15px">
-                            {{ panel.time }}
-                        </div>
+                        <div class="row" style="text-align: center">
+                            <div class="col-4">
+                                <h1>{{resume.score.score}} pts</h1>
+                                Tempo: {{ panel.time }}
+                            </div>
+                            <div class="col-8" style="font-size: 12pt; text-align: left"> 
+                                <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.score.totalHits}} pts<br>
+                                <img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: {{resume.score.totalErrors}} pts<br>
+                                <img src="./lib/img/clock.png" style="height: 25px;padding-top: 4px">Bônus tempo: {{resume.score.bonus}}<br>   
+                                <img src="./lib/img/ico_mini_skip.png" style="height: 25px;padding-top: 4px">Questões Puladas: {{resume.skips}}<br>                            
+                            </div>
+                        </div>                                
                     </div>
                     <div class="card-header">
-                        Pontuação:{{resume.score}}
+                        
                     </div>
                 </div>
             </div>
 
         </div>
 
-
+        <div class="row" style="padding-top: 10px">
+            <div class="col-10">
+                 Progresso:
+                 <div class="progress">
+                    <div ng-style="progressStyle" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="" aria-valuenow="{{progress}}" aria-valuemax="100"></div>
+                 </div>
+            </div>
+            <div class="col-2" style="text-align: center" ng-click="skip()">
+                <a href="#">
+                    <img src="./lib/img/ico_skip.png" style="height: 50px; ">Pular
+                </a>
+            </div>
+        </div>
+      
         <div class="row" style="padding-top: 10px">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        Ação
+                            <img src="./lib/img/ico_rank.png">Ranking(momento) 
                     </div>
                     <div class="card-body">
                         <div class="row" style="text-align: center">
-                            <div class="col-3">
-                               
-                            </div>
-                            <div class="col-3">
-                                
-                            </div>
-                            <div class="col-3">
-                               
-                            </div>
-                            <div class="col-3" ng-click="skip()">
-                                <a href="#">
-                                    <img src="./lib/img/ico_skip.png" style="height: 50px; "> Pular
-                                </a>
-                            </div>
-                           
+                               <div class="col-12" style="text-align: center">
+                                                 
+                                        <ul class="list-group" ng-repeat="r in ranking track by $index" style="text-align: left" >
+                                            <li ng-if="user.mail != r.email"class="list-group-item list-group-item" style=""><span style="font-size: 12pt"  class="badge badge-primary badge-pill">{{r.position}}º</span>  {{r.name}} <span style="float: right">Pontos: {{r.score}}</span></li>
+                                            <li ng-if="user.mail == r.email" class="list-group-item list-group-item-success active" style="font-weight: bold"><span style="font-size: 12pt" class="badge badge-warning badge-pill">{{r.position}}º</span> {{r.name}} <span style="float: right">Pontos: {{r.score}}</li>
+                                           
+                                            
+                                        </ul>
+                                      </div>
+                                   
                         </div>
 
 
@@ -185,7 +202,6 @@
 
             </div>
         </div>
-
 
 
 
