--- a/views/rooms/medium/room.template.html
+++ b/views/rooms/medium/room.template.html
@@ -158,14 +158,16 @@
                             <div class="card-body">
                                 <div class="row" style="text-align: center">
                                     <div class="col-4">
-                                        <h1>{{resume.score}} pts</h1>
+                                        <h1>{{resume.score.score}} pts</h1>
                                         Tempo: {{ panel.time }}
                                     </div>
                                     <div class="col-8" style="font-size: 12pt; text-align: left"> 
-                                            <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.hits}} pts<br>
-                                            <img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: - {{resume.errors}} pts<br>
-                                            <img src="./lib/img/ico_mini_skip.png" style="height: 25px;padding-top: 4px">Questões Puladas: {{resume.skips}}<br>
-                                            <img src="./lib/img/ico_dica.png" style="height: 25px; padding-top: 4px">Penalidades(dicas): {{resume.penalites}} pts 
+                                            <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.score.totalHits}} pts<br>
+                                            <img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: {{resume.score.totalErrors}} pts<br>
+                                            <img src="./lib/img/clock.png" style="height: 25px;padding-top: 4px">Bônus tempo: {{resume.score.bonus}}<br>
+                                            <img src="./lib/img/ico_dica.png" style="height: 25px; padding-top: 4px">Penalidades(dicas): {{resume.score.panalites}} pts <br>
+                                            <img src="./lib/img/ico_mini_skip.png" style="height: 25px;padding-top: 4px">Questões Puladas: {{resume.skips}}<br> 
+                                           
                                     </div>
                                 </div>                                
                             </div>
