--- a/views/rooms/medium/room.template.html
+++ b/views/rooms/medium/room.template.html
@@ -162,7 +162,7 @@
                                         Tempo: {{ panel.time }}
                                     </div>
                                     <div class="col-8" style="font-size: 12pt; text-align: left"> 
-                                            <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.score.totalHits}} pts<br>
+                                            <img src="./lib/img/ico_hit.png" style="height: 25px;padding-top: 4px">Total de acertos: {{resume.score.totalHits - resume.score.bonus}} pts<br>
                                             <img src="./lib/img/ico_err.png" style="height: 25px;padding-top: 4px">Total de erros: {{resume.score.totalErrors}} pts<br>
                                             <img src="./lib/img/clock.png" style="height: 25px;padding-top: 4px">Bônus tempo: {{resume.score.bonus}}<br>
                                             <img src="./lib/img/ico_dica.png" style="height: 25px; padding-top: 4px">Penalidades(dicas): {{resume.score.panalites}} pts <br>
